炫彩编程助手/Data/DemoMgr/VS/Lib/xcgui.h


/// @defgroup groupHandle 句柄列表
/// @ingroup macroDefine
/// @{
typedef void*   HXCGUI;       ///<资源句柄


///@}

///@defgroup Group_adjustLayout    调整布局标识位
///@ingroup  macroDefine
///@{
enum xc_adjustLayout_
{
	xc_adjustLayout_no = 0x00,  ///<不调整布局
	xc_adjustLayout_all = 0x01,  ///<强制调整自身和子对象布局.
	xc_adjustLayout_self = 0x02,  ///<只调整自身布局,不调整子对象布局.
};

																							  /////////////////////////////////////////////////////////
																							  //////////////定义结构体///////////////////////////////////
																							  /////////////////////////////////////////////////////////
struct BorderSize_i  //4条边的大小
{
	int  leftSize;
	int  topSize;
	int  rightSize;
	int  bottomSize;
};


struct xc_event
{
	xc_event(int regType, const char* pFunName) {
		m_pBind = 0;
		m_pFunC = 0;
		m_name[0] = 0;
		m_regType = regType;
		if (pFunName) strcpy_s(m_name, pFunName);
	}
	int            m_regType;   //注册类型, 0:CPP,1:CPP1,2:CPP2
	bind_event_cpp*  m_pBind;     //C++事件回调
	bind_event_c*    m_pFunC;     //C事件回调
	char           m_name[MAX_PATH]; //函数名

	BOOL Equal(xc_event* pEvent) {
		if (m_pBind && pEvent->m_pBind)
			return (m_pBind->Equal(pEvent->m_pBind));
		if (m_pFunC && pEvent->m_pFunC)
			return (m_pFunC->Equal(pEvent->m_pFunC));
		return FALSE;
	}
	BOOL Equal(void* pFunc) {
		if (m_pFunC)
		{
			if (m_pFunC->GetFunc() == pFunc)
				return TRUE;
		}
		return FALSE;
	}
	int HandleEvent(HELE hEle, HELE hEventEle, UINT nEvent, WPARAM wParam, LPARAM lParam, BOOL *pbHandled)
	{
		if (m_pBind)
			return m_pBind->HandleEvent(m_regType, hEle, hEventEle, nEvent, wParam, lParam, pbHandled);
		if (m_pFunC)
			return m_pFunC->HandleEvent(m_regType, hEle, hEventEle, nEvent, wParam, lParam, pbHandled);
		MessageBoxA(NULL, "HandleEvent()", "error", 0);
		return 0;
	}
	int HandleEventWnd(HWINDOW hWindow, UINT nEvent, WPARAM wParam, LPARAM lParam, BOOL *pbHandled)
	{
		if (m_pBind)
			return m_pBind->HandleEventWnd(m_regType, hWindow, nEvent, wParam, lParam, pbHandled);
		if (m_pFunC)
			return m_pFunC->HandleEventWnd(m_regType, hWindow, nEvent, wParam, lParam, pbHandled);
		MessageBoxA(NULL, "HandleEventWnd()", "error", 0);
		return 0;
	}
	char* GetFunName() { return m_name; }
	virtual void Release() {
		if (m_pBind) delete m_pBind;
		if (m_pFunC) delete m_pFunC;
		delete this;
	}
};
XC_API HELE WINAPI XEle_Create(int x, int y, int cx, int cy, HXCGUI hParent = NULL);

XC_API BOOL WINAPI _XEle_RegEvent(HELE hEle, UINT nEvent, xc_event* pEvent);

XC_API BOOL WINAPI _XEle_RemoveEvent(HELE hEle, UINT nEvent, xc_event* pEvent);

XC_API BOOL WINAPI XEle_RegEventC(HELE hEle, int nEvent, void *pFun); //注册事件C方式
XC_API BOOL WINAPI XEle_RegEventC1(HELE hEle, int nEvent, void *pFun);

XC_API BOOL WINAPI XEle_RegEventC2(HELE hEle, int nEvent, void *pFun);

XC_API BOOL WINAPI XEle_RemoveEventC(HELE hEle, int nEvent, void *pFun); //移除事件函数C方式
XC_API int  WINAPI XEle_SendEvent(HELE hEle, HELE hEventEle, int nEvent, WPARAM wParam, LPARAM lParam);

XC_API BOOL WINAPI XEle_PostEvent(HELE hEle, HELE hEventEle, int nEvent, WPARAM wParam, LPARAM lParam);

XC_API BOOL WINAPI XEle_IsShow(HELE hEle);

XC_API BOOL WINAPI XEle_IsEnable(HELE hEle);

XC_API BOOL WINAPI XEle_IsEnableFocus(HELE hEle);

XC_API BOOL WINAPI XEle_IsDrawFocus(HELE hEle);

XC_API BOOL WINAPI XEle_IsEnableEvent_XE_PAINT_END(HELE hEle);

XC_API BOOL WINAPI XEle_IsMouseThrough(HELE hEle);

XC_API BOOL WINAPI XEle_IsBkTransparent(HELE hEle);

XC_API BOOL WINAPI XEle_IsKeyTab(HELE hEle);

XC_API BOOL WINAPI XEle_IsSwitchFocus(HELE hEle);

XC_API BOOL WINAPI XEle_IsEnable_XE_MOUSEWHEEL(HELE hEle);

XC_API void WINAPI XEle_Enable(HELE hEle, BOOL bEnable);

XC_API void WINAPI XEle_EnableFocus(HELE hEle, BOOL bEnable);

XC_API void WINAPI XEle_EnableDrawFocus(HELE hEle, BOOL bEnable);

XC_API void WINAPI XEle_EnableDrawBorder(HELE hEle, BOOL bEnable);

XC_API void WINAPI XEle_EnableEvent_XE_PAINT_END(HELE hEle, BOOL bEnable);

XC_API void WINAPI XEle_EnableBkTransparent(HELE hEle, BOOL bEnable);

XC_API void WINAPI XEle_EnableMouseThrough(HELE hEle, BOOL bEnable);

XC_API void WINAPI XEle_EnableKeyTab(HELE hEle, BOOL bEnable);

XC_API void WINAPI XEle_EnableSwitchFocus(HELE hEle, BOOL bEnable);

XC_API void WINAPI XEle_EnableEvent_XE_MOUSEWHEEL(HELE hEle, BOOL bEnable);

XC_API int  WINAPI XEle_SetRect(HELE hEle, RECT *pRect, BOOL bRedraw = FALSE, int nFlags = xc_adjustLayout_all);

XC_API int  WINAPI XEle_SetRectEx(HELE hEle, int x, int y, int cx, int cy, BOOL bRedraw = FALSE, int nFlags = xc_adjustLayout_all);

XC_API int  WINAPI XEle_SetRectLogic(HELE hEle, RECT *pRect, BOOL bRedraw = FALSE, int nFlags = xc_adjustLayout_all); //逻辑模式坐标
XC_API void WINAPI XEle_GetRect(HELE hEle, RECT *pRect);   //相对与父坐标,人眼观察模式
XC_API void WINAPI XEle_GetRectLogic(HELE hEle, RECT *pRect); //相对与父坐标,逻辑模式
XC_API void WINAPI XEle_GetClientRect(HELE hEle, RECT *pRect);  //左上角为0，0坐标
XC_API void WINAPI XEle_GetWndClientRect(HELE hEle, out_ RECT *pRect);

XC_API int  WINAPI XEle_GetWidth(HELE hEle);

XC_API int  WINAPI XEle_GetHeight(HELE hEle);

XC_API void WINAPI XEle_RectWndClientToEleClient(HELE hEle, in_out_ RECT *pRect);

XC_API void WINAPI XEle_PointWndClientToEleClient(HELE hEle, in_out_ POINT *pPt);

XC_API void WINAPI XEle_RectClientToWndClient(HELE hEle, in_out_ RECT *pRect);

XC_API void WINAPI XEle_PointClientToWndClient(HELE hEle, in_out_ POINT *pPt);
XC_API void WINAPI XEle_RemoveEle(HELE hEle);

XC_API BOOL WINAPI XEle_SetZOrder(HELE hEle, int index);

XC_API void WINAPI XEle_GetBorderSize(HELE hEle, BorderSize_i* pBorder);

XC_API void WINAPI XEle_SetPadding(HELE hEle, int left, int top, int right, int bottom);

XC_API void WINAPI XEle_GetPadding(HELE hEle, PaddingSize_i* pPadding);