炫彩编程助手/Data/DemoMgr/net简化版/Lib/XCGUI.cs


        [DllImport("xcgui.dll", EntryPoint = "XEle_GetBorderSize", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_GetBorderSize(int hEle, BorderSize_i pBorder);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetPadding", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_SetPadding(int hEle, int left, int top, int right, int bottom);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetPadding", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XEle_GetPadding(int hEle, PaddingSize_i pPadding);

        [DllImport("xcgui.dll", EntryPoint = "XEle_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int Create(int x, int y, int cx, int cy, int hParent);

        [DllImport("xcgui.dll", EntryPoint = "_XEle_RegEvent", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool _XEle_RegEvent(int hEle, int nEvent, int pEvent);

        [DllImport("xcgui.dll", EntryPoint = "_XEle_RemoveEvent", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool _XEle_RemoveEvent(int hEle, int nEvent, int pEvent);

        [DllImport("xcgui.dll", EntryPoint = "XEle_RegEventC", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool RegEventC(int hEle, int nEvent, int pFun);

        [DllImport("xcgui.dll", EntryPoint = "XEle_RegEventC1", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool RegEventC1(int hEle, int nEvent, int pFun);

        [DllImport("xcgui.dll", EntryPoint = "XEle_RegEventC2", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool RegEventC2(int hEle, int nEvent, int pFun);

        [DllImport("xcgui.dll", EntryPoint = "XEle_RemoveEventC", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool RemoveEventC(int hEle, int nEvent, int pFun);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SendEvent", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int SendEvent(int hEle, int hEventEle, int nEvent, int wParam, int lParam);

        [DllImport("xcgui.dll", EntryPoint = "XEle_PostEvent", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool PostEvent(int hEle, int hEventEle, int nEvent, int wParam, int lParam);

        [DllImport("xcgui.dll", EntryPoint = "XEle_IsShow", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool IsShow(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_IsEnable", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool IsEnable(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_IsEnableFocus", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool IsEnableFocus(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_IsDrawFocus", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool IsDrawFocus(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_IsEnableEvent_XE_PAINT_END", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool IsEnableEvent_XE_PAINT_END(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_IsMouseThrough", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool IsMouseThrough(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_IsBkTransparent", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool IsBkTransparent(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_IsKeyTab", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool IsKeyTab(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_IsSwitchFocus", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool IsSwitchFocus(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_IsEnable_XE_MOUSEWHEEL", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool IsEnable_XE_MOUSEWHEEL(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_IsInScrollView", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool IsInScrollView(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_Enable", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void Enable(int hEle, bool bEnable);

        [DllImport("xcgui.dll", EntryPoint = "XEle_EnableFocus", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void EnableFocus(int hEle, bool bEnable);

        [DllImport("xcgui.dll", EntryPoint = "XEle_EnableDrawFocus", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void EnableDrawFocus(int hEle, bool bEnable);

        [DllImport("xcgui.dll", EntryPoint = "XEle_EnableDrawBorder", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void EnableDrawBorder(int hEle, bool bEnable);

        [DllImport("xcgui.dll", EntryPoint = "XEle_EnableEvent_XE_PAINT_END", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void EnableEvent_XE_PAINT_END(int hEle, bool bEnable);

        [DllImport("xcgui.dll", EntryPoint = "XEle_EnableBkTransparent", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void EnableBkTransparent(int hEle, bool bEnable);

        [DllImport("xcgui.dll", EntryPoint = "XEle_EnableMouseThrough", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void EnableMouseThrough(int hEle, bool bEnable);

        [DllImport("xcgui.dll", EntryPoint = "XEle_EnableKeyTab", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void EnableKeyTab(int hEle, bool bEnable);

        [DllImport("xcgui.dll", EntryPoint = "XEle_EnableSwitchFocus", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void EnableSwitchFocus(int hEle, bool bEnable);

        [DllImport("xcgui.dll", EntryPoint = "XEle_EnableEvent_XE_MOUSEWHEEL", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void EnableEvent_XE_MOUSEWHEEL(int hEle, bool bEnable);

        [DllImport("xcgui.dll", EntryPoint = "XEle_EnableInScrollView", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void EnableInScrollView(int hEle, bool bEnable);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool SetRect(int hEle, RECT* pRect, bool bRedraw);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetRectEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool SetRectEx(int hEle, int x, int y, int cx, int cy, bool bRedraw);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetRectLogic", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool SetRectLogic(int hEle, RECT* pRect, bool bRedraw);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void GetRect(int hEle, RECT* pRect);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetRectLogic", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void GetRectLogic(int hEle, RECT* pRect);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetClientRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void GetClientRect(int hEle, RECT* pRect);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetWndClientRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void GetWndClientRect(int hEle, RECT* pRect);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetWidth", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetWidth(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetHeight", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetHeight(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_RectWndClientToEleClient", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void RectWndClientToEleClient(int hEle, RECT* pRect);

        [DllImport("xcgui.dll", EntryPoint = "XEle_PointWndClientToEleClient", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void PointWndClientToEleClient(int hEle, POINT* pPt);

        [DllImport("xcgui.dll", EntryPoint = "XEle_RectClientToWndClient", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void RectClientToWndClient(int hEle, RECT* pRect);

        [DllImport("xcgui.dll", EntryPoint = "XEle_PointClientToWndClient", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void PointClientToWndClient(int hEle, POINT* pPt);

        [DllImport("xcgui.dll", EntryPoint = "XEle_AddEle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool AddEle(int hEle, int hChildEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_InsertEle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool InsertEle(int hEle, int hChildEle, int index);

        [DllImport("xcgui.dll", EntryPoint = "XEle_RemoveEle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void RemoveEle(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_AddShape", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool AddShape(int hEle, int hShape);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetZOrder", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool SetZOrder(int hEle, int index);
